--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="col-md-6">
                 <p class="text-center">Press any key to start</p>
 
-                <div class="text-center" id="wins-div"></div>
+                <div id="wins-div"></div>
                 <div id="currentWord-div"></div>
                 <div id="guessesLeft-div"></div>
                 <div id="guesses-div"></div>
