--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 
             </div>
             <div class="col-md-6">
-                <p class="text-center">Press any key to start</p>
+                <p class="text-center">Press any key to start!</p>
 
                 <div id="wins-div"></div>
-                <div id="currentWord-div"></div>
+                <p>Current Word:
+                <div id="currentWord-div"></div></p>
                 <div id="guessesLeft-div"></div>
                 <div id="guesses-div"></div>
 
