--- a/index.html
+++ b/index.html
@@ -16,8 +16,15 @@
             </div>
         </div>
         <div class="row">
+            <div class="col-md-4"></div>
+            <div class="col-md-4">
+                <div id="topcard-div"></div>
+            </div>
+            <div class="col-md-4"></div>
+        </div>
+        <div class="row">
             <div class="col-md-6">
-
+                <img id="photo-div" src="assets/images/gunbarrel.jpg">
             </div>
             <div class="col-md-6">
                 <p class="text-center">Press any key to start!</p>
