--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Cantarell" rel="stylesheet">
 </head>
-<body>
+<body class="bg-dark text-white">
+    <audio id="audiotag1" src="assets/007.mp3" preload="auto"></audio>
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1 class="text-center">007 Hangman</h1>
+                <h1 class="display-2">HANGMAN</h1>
+                <div class="bond position-relative">007</div>
             </div>
         </div>
         <div class="row">
