--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-                <img id="photo-div" src="assets/images/gunbarrel.jpg">
+                <img class="rounded-circle" id="photo-div" src="assets/images/gunbarrel.jpg">
             </div>
             <div class="col-md-6">
                 <p class="text-center">Press any key to start!</p>
